src/styles/_apropos.scss
.kasa-apropos{
     @include pageLengthdesktop();
     width: 100%;
     margin-bottom: 335px;
     
     .kasa-apropos_section1{
          position: absolute;
          width: 1240px;
          width: 86%;
          height: 223px;
          left: 7%;
          top: 152px;
          background-size: cover;
          overflow: hidden;
          background: #1e1c1c3d;
          mix-blend-mode: darken;
          border-radius: 25px;
   
          .sectionimagekalen{
               position: absolute;
               width: 1240px;
               height: 827px;
               width: 100%;
               mix-blend-mode: darken;
               border-radius: 25px;
               transform: translate(1px, -310px);
          }
          .sectionimagegustavo{
               display: none;
          }
     }
     
        
}
@media screen and  (min-width: 2561px)  {
     .kasa-apropos{
          margin-bottom: 325px;
          .kasa-apropos_section1{
              left: 9%;
              width: 85%;
          }
     }
}     

@media screen and  (min-width: 1500px) and (max-width: 2560px) {
     .kasa-apropos{
          margin-bottom: 429px;
          .kasa-apropos_section1{
              left: 9%;
              width: 84%;
          }
     }
}
@media screen and (min-width:1025px) and (max-width:1400px){ 
     .kasa-apropos{
          @include pageLengthdesktop();
          margin-bottom: 320px;
          
          .kasa-apropos_section1{
               position: absolute;
               width: 1240px;
               width: 90%;
               height: 223px;
               left: 100px;
               left: 6%;
               top: 126px;
               background-size: cover;
               overflow: hidden;
               background: #1e1c1c3d;
               mix-blend-mode: darken;
               border-radius: 25px;
        
               .sectionimagekalen{
                    position: absolute;
                    width: 1240px;
                    height: 827px;
                    width: 100%;
                    mix-blend-mode: darken;
                    border-radius: 25px;
                    transform: translate(1px, -310px);
               }
               .sectionimagegustavo{
                    display: none;
               }
          }
          
             
     }
}     
@media screen and (min-width: 769px) and (max-width:1024px){ 
     .kasa-apropos{
          @include pageLengthdesktop();
          margin-bottom: 390px;
          
          .kasa-apropos_section1{
               position: absolute;
               width: 1240px;
               width: 90%;
               height: 223px;
               left: 100px;
               left: 6%;
               top: 126px;
               background-size: cover;
               overflow: hidden;
               background: #1e1c1c3d;
               mix-blend-mode: darken;
               border-radius: 25px;
        
               .sectionimagekalen{
                    position: absolute;
                    width: 1240px;
                 
                    height: 827px;
                   
                    width: 100%;
                    mix-blend-mode: darken;
                    border-radius: 25px;
                    transform: translate(1px, -310px);
               }
               .sectionimagegustavo{
                    display: none;
               }
          }
          
             
     }
}     
@media screen and (min-width: 427px) and (max-width:768px){
     .kasa-apropos{
          @include pageLengthmobile();
          width: 100%;
          margin-bottom: 40%;
         
          .kasa-apropos_section1{
               position: absolute;
               width: 336px;
               width: 90%;
               height: 223px;
               left: 6%;
               top: 104px;

               background-size: cover;
               overflow: hidden;
               background: #1e1c1c3d;
               mix-blend-mode: darken;
               border-radius: 10px;
        
               .sectionimagekalen{
                    display: none;
               }
               .sectionimagegustavo{
                    display: unset;
                    position: absolute;
                 
                    height: 223px;
                  
                    width: 100%;
                    mix-blend-mode: darken;
                    border-radius: 10px;       
                    object-fit: cover;           
               }
               
          }
          
             
     }     
}     
@media screen and (min-width: 377px) and (max-width:426px){
     .kasa-apropos{
          @include pageLengthmobile();
          width: 100%;
          margin-bottom: 14%;
         
          .kasa-apropos_section1{
               position: absolute;
               width: 336px;
               width: 88%;
               height: 223px;
               left: 20px;
               top: 84px;

               background-size: cover;
               overflow: hidden;
               background: #1e1c1c3d;
               mix-blend-mode: darken;
               border-radius: 10px;
        
               .sectionimagekalen{
                    display: none;
               }
               .sectionimagegustavo{
                    display: unset;
                    position: absolute;
                 
                    height: 223px;
                    
                    width: 100%;
                    mix-blend-mode: darken;
                    border-radius: 10px;                  
               }
               
          }
          
             
     }     
}
@media screen and (min-width: 321px)and (max-width:376px){
     .kasa-apropos{
          @include pageLengthmobile();
          width: 100%;
          margin-bottom: 22%;
         
          .kasa-apropos_section1{
               position: absolute;
               width: 336px;
               width: 90%;
               height: 223px;
               left: 20px;
               top: 84px;

               background-size: cover;
               overflow: hidden;
               background: #1e1c1c3d;
               mix-blend-mode: darken;
               border-radius: 10px;
        
               .sectionimagekalen{
                    display: none;
               }
               .sectionimagegustavo{
                    display: unset;
                    position: absolute;
              
                    height: 223px;
                
                    width: 100%;
                    mix-blend-mode: darken;
                    border-radius: 10px;                  
               }
               
          }
          
             
     }     
     
        
}
@media screen and (max-width: 320px){
     .kasa-apropos{
          @include pageLengthmobile();
          width: 100%;
          margin-bottom: 54%;
         
          .kasa-apropos_section1{
               position: absolute;
               max-width: 300px;
               width: 88%;
               height: 223px;
               left: 20px;
               left: 5%;
               top: 84px;

               background-size: cover;
               overflow: hidden;
               background: #1e1c1c3d;
               mix-blend-mode: darken;
               border-radius: 10px;
        
               .sectionimagekalen{
                    display: none;
               }
               .sectionimagegustavo{
                    display: unset;
                    position: absolute;
                    
                    height: 223px;
                    
                    width: 100%;
                    mix-blend-mode: darken;
                    border-radius: 10px;                  
               }
               
          }
          
             
     }     
}     

